v0.12/network/eip.tf
# Elastic IP Address
resource "aws_eip" "nat_gateway" {
  vpc = true
  depends_on = [aws_internet_gateway.ex]
}
